[package]
name = "network_traffic_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.30", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Ioctl",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Rpc",
	"Win32_Networking_WinSock", 
	"Win32_NetworkManagement_WindowsFilteringPlatform"
] }
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
runas = "0.2"
